# Wigent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  agent.py  install.sh  one.md  pyproject.toml  uninstall.sh  update.sh
.agent/sessions/: full_test.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  INSTALL.md
tests/: test_build_phase.py  test_interview_mode.py  test_planner.py  test_safety_property.py  test_skill_router.py
tests/core/: test_triage_engine.py
wigent/: __init__.py  __main__.py
wigent/cli/: __init__.py  app.py  cli_args.py  commands.py  config.py  diff_display.py  input_handler.py  render.py  setup_wizard.py  tui_app.py  tui_styles.tcss  ui_components.py
wigent/cli/tui_widgets/: __init__.py  file_tree.py  help_modal.py  model_picker.py  status_bar.py
wigent/config/: __init__.py  defaults.py  models_config.py  modes.py  settings.py  skills.py
wigent/core/: __init__.py  agent.py  auto_indexer.py  context_packer.py  debugger.py  doubt_engine.py  executor.py  loop.py  orchestrator.py  planner.py  project_context.py  review_engine.py  skill_router.py  slice_engine.py  triage_engine.py  workspace.py
wigent/mcp/: __init__.py  client.py  registry.py  tool_adapter.py
wigent/memory/: __init__.py  checkpoints.py  context_manager.py  conversation.py  session.py  vector_store.py  workspace.py
wigent/models/: __init__.py  anthropic_model.py  anthropic_provider.py  base.py  base_model.py  gemini_model.py  groq_model.py  litellm_proxy.py  model_factory.py  ollama_model.py  openai_model.py  openai_provider.py  openrouter_model.py  registry.py
wigent/modes/: __init__.py  api.py  debugger.py  frontend.py  interview.py  reviewer.py  simplify.py
wigent/prompts/: __init__.py  architect.md  base.md  coder.md  debug.md  debugger.md  ideate.md  interview.md  orchestrator.md  reviewer.md  safety.md  simplify.md  spec.md  system.py  tdd.md  templates.py  tool_use.md  verify.md
wigent/safety/: __init__.py  approval.py  approvals.py  diff_viewer.py  owasp_scanner.py  sandbox.py  validator.py
wigent/templates/: __init__.py  task.md
wigent/tests/: __init__.py  test_full_integration.py  test_memory_integration.py  test_modes.py  test_openrouter_smoke.py  test_safety_smoke.py  test_tools_integration.py  test_tui_smoke.py  test_ui_smoke.py  test_workspace_smoke.py
wigent/tests/test_cli/: __init__.py  test_app.py  test_render.py
wigent/tests/test_core/: __init__.py  test_agent.py
wigent/tests/test_memory/: __init__.py  test_conversation.py
wigent/tests/test_models/: __init__.py  test_base.py  test_registry.py
wigent/tests/test_safety/: __init__.py  test_approval.py  test_validator.py
wigent/tests/test_tools/: __init__.py  test_file_ops.py  test_search.py  test_shell.py  test_visual_diff.py
wigent/tools/: __init__.py  _safe_path.py  ast_analyzer.py  bash_executor.py  browser_mcp.py  code_search.py  complexity_analyzer.py  devtools.py  file_lister.py  file_ops.py  file_reader.py  file_search.py  file_writer.py  git_tool.py  search.py  secret_scanner.py  shell.py  source_fetcher.py  test_generator.py  tool_schemas.py  visual_diff.py
