[project]
name = "wigent"
version = "0.5.5"
description = "Autonomous AI coding agent with memory, safety, and project awareness"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "openai>=2.0.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.8.0",
    "groq>=1.0.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "GitPython>=3.0.0",
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
]

[project.scripts]
wigent = "wigent.cli.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["wigent*"]
