[project]
name = "wigent"
version = "1.0.0"
description = "Autonomous AI coding agent with memory, safety, and project awareness"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.8.0",
    "groq>=1.0.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "prompt-toolkit>=3.0.0",
    "GitPython>=3.0.0",
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
wigent = "wigent.cli.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wigent*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["wigent/tests"]
filterwarnings = [
    "ignore::DeprecationWarning:wigent.tools.file_writer:",
    "ignore::FutureWarning:wigent.models.gemini_model:",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
