[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wigent"
version = "1.1.0"
description = "AI Coding Agent CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Eminemahjoub"}]

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai",
    "textual>=0.40.0",
    "groq",
    "litellm",
    "rich>=13.0.0",
    "click>=8.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests",
    "langgraph>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.scripts]
wigent = "wigent.cli.app:main"

[project.urls]
Homepage = "https://github.com/eminemahjoub/Wigent"
Repository = "https://github.com/eminemahjoub/Wigent"

[project.optional-dependencies]
vector = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0.0",
]
git = [
    "gitpython>=3.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
    "wigent[vector,git]",
]

[tool.setuptools.packages.find]
include = ["wigent*"]
exclude = ["tests*", "venv*", "docs*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["wigent/tests"]
filterwarnings = [
    "ignore::DeprecationWarning:wigent.tools.file_writer:",
    "ignore::FutureWarning:wigent.models.gemini_model:",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
